Fix extension id

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "homepage_url": "https://github.com/jwl-7/leetcode-themes",
     "browser_specific_settings": {
         "gecko": {
-            "id": "e2e52b5d-337a-4693-abde-a096277d3710"
+            "id": "{e2e52b5d-337a-4693-abde-a096277d3710}"
         }
     },
     "icons": { "128": "icons/icon-128.png" },
