--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "LeetCode Themes",
     "description": "Customize LeetCode editor with various themes.",
-    "version": "1.2",
+    "version": "1.3",
     "manifest_version": 3,
     "author": "jwl-7",
     "homepage_url": "https://github.com/jwl-7/leetcode-themes",
@@ -13,7 +13,8 @@
     "icons": { "128": "icons/icon-128.png" },
     "permissions": [
         "scripting",
-        "storage"
+        "storage",
+        "webNavigation"
     ],
     "host_permissions": ["https://leetcode.com/problems/*"],
     "action": {
@@ -29,7 +30,8 @@
             "background/background.js",
             "background/theme-handlers.js",
             "background/theme-manager.js",
-            "background/inject-theme-background.js"
+            "background/inject-theme-background.js",
+            "background/update-reset-code-explore.js"
         ]
     },
     "content_scripts": [
@@ -42,6 +44,15 @@
                 "content_scripts/inject.js",
                 "content_scripts/reset-code.js",
                 "content_scripts/load.js"
+            ]
+        },
+        {
+            "matches": ["https://leetcode.com/explore/*"],
+            "js": [
+                "util/constants.js",
+                "util/utils.js",
+                "util/storage.js",
+                "content_scripts/reset-code-explore.js"
             ]
         }
     ],
